# PrisPack

./: .gitignore  CMakeLists.txt  README.md  debug_build_sample.sh  main.cpp  release_build_sample.sh
config/: CUDAheaders.cuh  config.h  debug.h  headers.h
external_packages/RCM/: CMakeLists.txt
external_packages/RCM/include/: rcm.hpp
external_packages/RCM/lib/: rcm.cpp
external_packages/cmakeFind/: FindMETIS.cmake  FindMKL.cmake  FindOpenBLAS.cmake
external_packages/cmakeFind/FindSuiteSparse/: FindAMD.cmake  FindSuiteSparse_config.cmake  SuiteSparseTestCompile.cpp
include/CUDA/: EventController.cuh  StreamController.cuh  cuKernel.cuh  cuThrust.cuh
include/CUDA/BLAS/: CUBLAStools.cuh  CUSPARSEtools.cuh
include/MatrixClass/: BaseMatrix.h  COOMatrix.h  CSRMatrix.h  DenseMatrix.h  DeviceCSRMatrix.cuh  MatrixTools.h  ModelProblem.h
include/Preconditioner/: AMSEDDeviceTools.cuh  AMSEDPrecondition.h  BasePreconditon.h  GMSLRPrecondition.h  IncompleteCholesky.h  IncompleteLDLT.h  IncompleteLU.h
include/Solver/: BaseSolver.h  CG.h  GMRES.h
include/VectorClass/: AlignedVector.h  AutoAllocateVector.h  BaseVector.h  DenseVector.h  DeviceVector.cuh  PageLockedVector.cuh  SyncDeviceVector.cuh  VectorTools.h
include/utils/: BaseUtils.h  ErrorHandler.h
include/utils/ExternalTools/: MatrixReorderTools.h  MetisTools.h
include/utils/MemoryTools/: DeviceMemoryController.cuh  HostMemoryController.hpp  SharedPtrTools.h  UniquePtrTools.h
include/utils/SIMDtools/: FastVectorTools.hpp
include/utils/TestTools/: ReadMtxTools.h  WriteDataTools.hpp  WriteMtxTools.h  checkTools.hpp  generateTools.hpp  mmio.h
include/utils/TimerTools/: CPUtimer.hpp  GPUtimer.cuh
source/CUDA/: StreamController.cu
source/CUDA/BLAS/: CUBLAStools.cu  CUSPARSEtools.cu
source/MatrixClass/: COOMatrix.cpp  CSRMatrix.cpp  DenseMatrix.cpp  DeviceCSRMatrix.cu  ModelProblem.cpp
source/Preconditioner/: AMSEDDeviceTools.cu  AMSEDPrecondition.cpp  GMSLRDPrecondition.cpp  IncompleteCholesky.cpp  IncompleteLDLT.cpp  IncompleteLU.cpp
source/Solver/: CG.cpp  GMRES.cpp
source/VectorClass/: AlignedVector.cpp  AutoAllocateVector.cpp  DenseVector.cpp  DeviceVector.cu  PageLockedVector.cu  SyncDeviceVector.cu
source/test/: testAMSEDSolver.cpp  testMKL.cpp  testMatrix.cpp  testMatrixOrdering.cpp  testMetis.cpp  testOpenBLAS.cpp  testPrecond.cpp  testSolver.cpp  testUtils.cpp  testVector.cpp
source/test/CUDA/: testCublas.cu  testCusparse.cu
source/utils/: ErrorHandler.cpp
source/utils/TestTools/: ReadMtxTools.cpp  WriteMtxTools.cpp  mmio.cpp
